tools/epanet-reader/epanet_reader/outputapi.py


ENR_ElementCount = enum_anon_3 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 37

enum_anon_4 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 42

ENR_flowUnits = 1 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 42

ENR_pressUnits = 2 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 42

ENR_Unit = enum_anon_4 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 42

enum_anon_5 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 49

ENR_reportStart = 1 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 49

ENR_reportStep = 2 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 49

ENR_simDuration = 3 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 49

ENR_numPeriods = 4 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 49

ENR_Time = enum_anon_5 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 49

enum_anon_6 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 56

ENR_demand = 1 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 56

ENR_head = 2 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 56

ENR_pressure = 3 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 56

ENR_quality = 4 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 56

ENR_NodeAttribute = enum_anon_6 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 56

enum_anon_7 = c_int # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_flow = 1 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_velocity = 2 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_headloss = 3 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_avgQuality = 4 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_status = 5 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_setting = 6 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_rxRate = 7 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_frctnFctr = 8 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

ENR_LinkAttribute = enum_anon_7 # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 67

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 90
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_init'):
        continue
    ENR_init = _lib.ENR_init
    ENR_init.argtypes = []
    ENR_init.restype = POINTER(ENResultsAPI)
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 92
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_open'):
        continue
    ENR_open = _lib.ENR_open
    ENR_open.argtypes = [POINTER(ENResultsAPI), String]
    ENR_open.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 94
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getVersion'):
        continue
    ENR_getVersion = _lib.ENR_getVersion
    ENR_getVersion.argtypes = [POINTER(ENResultsAPI), POINTER(c_int)]
    ENR_getVersion.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 96
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getNetSize'):
        continue
    ENR_getNetSize = _lib.ENR_getNetSize
    ENR_getNetSize.argtypes = [POINTER(ENResultsAPI), ENR_ElementCount, POINTER(c_int)]
    ENR_getNetSize.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 98
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getUnits'):
        continue
    ENR_getUnits = _lib.ENR_getUnits
    ENR_getUnits.argtypes = [POINTER(ENResultsAPI), ENR_Unit, POINTER(c_int)]
    ENR_getUnits.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 100
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getTimes'):
        continue
    ENR_getTimes = _lib.ENR_getTimes
    ENR_getTimes.argtypes = [POINTER(ENResultsAPI), ENR_Time, POINTER(c_int)]
    ENR_getTimes.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 102
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getElementName'):
        continue
    ENR_getElementName = _lib.ENR_getElementName
    ENR_getElementName.argtypes = [POINTER(ENResultsAPI), ENR_ElementType, c_int, String]
    ENR_getElementName.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 109
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getEnergyUsage'):
        continue
    ENR_getEnergyUsage = _lib.ENR_getEnergyUsage
    ENR_getEnergyUsage.argtypes = [POINTER(ENResultsAPI), c_int, POINTER(c_int), POINTER(c_float)]
    ENR_getEnergyUsage.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 111
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getNetReacts'):
        continue
    ENR_getNetReacts = _lib.ENR_getNetReacts
    ENR_getNetReacts.argtypes = [POINTER(ENResultsAPI), POINTER(c_float)]
    ENR_getNetReacts.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 113
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_newOutValueSeries'):
        continue
    ENR_newOutValueSeries = _lib.ENR_newOutValueSeries
    ENR_newOutValueSeries.argtypes = [POINTER(ENResultsAPI), c_int, c_int, POINTER(c_int), POINTER(c_int)]
    ENR_newOutValueSeries.restype = POINTER(c_float)
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 115
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_newOutValueArray'):
        continue
    ENR_newOutValueArray = _lib.ENR_newOutValueArray
    ENR_newOutValueArray.argtypes = [POINTER(ENResultsAPI), ENR_ApiFunction, ENR_ElementType, POINTER(c_int), POINTER(c_int)]
    ENR_newOutValueArray.restype = POINTER(c_float)
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 118
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getNodeSeries'):
        continue
    ENR_getNodeSeries = _lib.ENR_getNodeSeries
    ENR_getNodeSeries.argtypes = [POINTER(ENResultsAPI), c_int, ENR_NodeAttribute, c_int, c_int, POINTER(c_float)]
    ENR_getNodeSeries.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 120
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getLinkSeries'):
        continue
    ENR_getLinkSeries = _lib.ENR_getLinkSeries
    ENR_getLinkSeries.argtypes = [POINTER(ENResultsAPI), c_int, ENR_LinkAttribute, c_int, c_int, POINTER(c_float)]
    ENR_getLinkSeries.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 123
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getNodeAttribute'):
        continue
    ENR_getNodeAttribute = _lib.ENR_getNodeAttribute
    ENR_getNodeAttribute.argtypes = [POINTER(ENResultsAPI), c_int, ENR_NodeAttribute, POINTER(c_float), POINTER(c_int)]
    ENR_getNodeAttribute.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 125
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getLinkAttribute'):
        continue
    ENR_getLinkAttribute = _lib.ENR_getLinkAttribute
    ENR_getLinkAttribute.argtypes = [POINTER(ENResultsAPI), c_int, ENR_LinkAttribute, POINTER(c_float), POINTER(c_int)]
    ENR_getLinkAttribute.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 128
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getNodeResult'):
        continue
    ENR_getNodeResult = _lib.ENR_getNodeResult
    ENR_getNodeResult.argtypes = [POINTER(ENResultsAPI), c_int, c_int, POINTER(c_float)]
    ENR_getNodeResult.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 130
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_getLinkResult'):
        continue
    ENR_getLinkResult = _lib.ENR_getLinkResult
    ENR_getLinkResult.argtypes = [POINTER(ENResultsAPI), c_int, c_int, POINTER(c_float)]
    ENR_getLinkResult.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 133
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_free'):
        continue
    ENR_free = _lib.ENR_free
    ENR_free.argtypes = [POINTER(c_float)]
    ENR_free.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 135
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_close'):
        continue
    ENR_close = _lib.ENR_close
    ENR_close.argtypes = [POINTER(ENResultsAPI)]
    ENR_close.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 137
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'ENR_errMessage'):
        continue
    ENR_errMessage = _lib.ENR_errMessage
    ENR_errMessage.argtypes = [c_int, String, c_int]
    ENR_errMessage.restype = c_int
    break

__const = c_int # <command-line>: 5

# <command-line>: 8
try:
    CTYPESGEN = 1
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 12
try:
    MAXFNAME = 259
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 13
try:
    MAXID = 31
except:
    pass

ENResultsAPI = struct_ENResultsAPI # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\epanet-output\\src\\outputapi.h: 16

# No inserted files

